# auto-browse

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: evals.yml
agent/: __init__.py  browser.py  cli.py  default_openrouter_config.ini  extract.py  models.py  observability.py  openrouter_client.py  planner.py  run.py
auto_browse/: __init__.py  __main__.py  api.py  cli.py  security.py
config/: config.ini  security.toml
evals/: tasks.json  tasks_complex.json
scripts/: run_api.sh  run_eval.py
tests/: test_api.py  test_api_status_mapping.py  test_browser_capture_resilience.py  test_browser_visibility_limit.py  test_env_loading.py  test_extract.py  test_planner_loop_context.py  test_public_api.py  test_run_eval.py  test_security_settings.py  test_star_wars_example.py  test_start_url_normalization.py
